--- a/ClubWebsite.html
+++ b/ClubWebsite.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <link rel="stylesheet" type="text/css" href="./ClubWebsiteCSS.css">
         <title>shippedbuddy</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <header>
